# SmartCompute

./: ..env.swp  .bandit  .dockerignore  .env.development  .env.example  .env.production.template  .gitignore  =0.27.0  ADD_CERTIFICATION_BADGES.md  ADVANCED_FEATURES_SUMMARY.md  CHANGELOG.md  CHECKLIST_OPERATIVO.md  CLI_USAGE_GUIDE.md  COMPETITIVE_ANALYSIS_ENTERPRISE_SECURITY.md  CONTRIBUTING.md  CREATE_GITHUB_RELEASE.md  DASHBOARD_TEMPLATE_README.md  DEPLOYMENT.md  DEPLOYMENT_PACKAGE.md  DISCLAIMER.md  Dockerfile  Dockerfile.prod  Dockerfile.test  EJECUTAR_ANALISIS.bat  GITHUB_SECURITY_ACTIVATION.md  GOOD_FIRST_ISSUES.md  GUIA_USUARIO_SMARTCOMPUTE.md  HYBRID_ARCHITECTURE_GUIDE.md  LICENSE  LICENSE-COMMERCIAL  MARKETING_POSTS.md  MARKETING_TRACKER.md  Makefile  PAYMENT_SYSTEM_README.md  POST_AUDIT_RECOMMENDATIONS.md  PRICING_POLICY_FIX.md  QUICKSTART.md  README.md  README_EN.md  README_ENTERPRISE.md  (+140 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
alembic/: env.py
app/: __init__.py
architecture/: README.md
backup_v1/: smartcompute_security.py
clean_repository/: .gitignore  COMPETITIVE_ANALYSIS_ENTERPRISE_SECURITY.md  README.md  authorized_locations_example.json  config_example.ini  mle_star_analysis_engine.py  operators_example.json  package.json  smartcompute_ai_learning.py
desktop/: smartcompute_gui.py
distribution/: README.md  privacy_policy.md
docs/: DOCUMENTACION_TECNICA.md  ENTERPRISE_GUIDE.md  GUIA_EMPRESARIAL.md  GUIA_INICIO_RAPIDO.md  NETWORK_INTELLIGENCE_GUIDE.md  OBSERVABILITY.md  QUICK_START_GUIDE.md  REPOSITORY_ACCESS.md  SECURITY_GUIDE.md  TECHNICAL_DOCUMENTATION.md  TOKEN_INTELLIGENCE_GUIDE.md  checkout_redirect.html  getting_started.md  index.html  industrial_guide.md
download/: INSTRUCCIONES_FIRMA_DIGITAL.md  SmartCompute_Express.ps1  SmartCompute_Express_Linux.sh  SmartCompute_Express_PS.bat  SmartCompute_Express_Windows.bat  crear_certificado_smartcompute.ps1  firmar_powershell.ps1  solucion_certificado_gratis.bat
download_system/: secure_download_manager.py
enterprise/: INSTRUCCIONES_PDF.txt  README_ENTERPRISE_MCP.md  backup_disaster_recovery.py  business_context_xdr_router.py  deployment_automation_cicd.py  informe_evaluacion_completa.html  intelligent_alert_aggregator.py  launch_smartcompute_analysis.sh  ml_threat_prioritization.py  monitoring_alerting_system.py  multi_xdr_response_engine.py  production_security_hardening.py  quick_start_guide.md  smartcompute_admin_authorization.py  smartcompute_hrm_learning_framework.py  smartcompute_live_analysis.py  smartcompute_mcp_integrated_analysis.py  smartcompute_mitre_experimenter.py  smartcompute_nodejs_sandbox.py  smartcompute_secret_manager.py  test_mcp_integration.py  test_xdr_integration.py  (+5 more)
(+307 files in other folders)
